# claude-roster

./: .gitignore  CLAUDE.md  README.md  agents.yaml  pyproject.toml
docs/superpowers/plans/: 2026-06-16-claude-cockpit.md  2026-06-23-resume-session-picker.md
docs/superpowers/specs/: 2026-06-16-claude-cockpit-design.md  2026-06-23-resume-session-picker-design.md
src/claude_cockpit/: cc_signals.py  config.py  controller.py  dialogs.py  launcher.py  main.py  matching.py  panel.py  sessions.py  settings.py  sound.py  store.py  winman.py
src/claude_cockpit/hooks/: clear.py  notify.py  turn_ended.py
tests/: test_cc_signals.py  test_config.py  test_controller.py  test_hooks.py  test_launcher.py  test_matching.py  test_newly_pending.py  test_sessions.py  test_settings.py  test_store.py
